--- a/css/foundation.css
+++ b/css/foundation.css
@@ -421,7 +421,7 @@ button {
   line-height: 1; }
 
 .row {
-  max-width: 75rem;
+  /*max-width: 75rem;*/
   margin-left: auto;
   margin-right: auto; }
   .row::before, .row::after {
